--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,11 @@ button {
     cursor: pointer;
     border: 1px solid gray;
 }
+
+.correct {
+    color: green;
+}
+
+.incorrect {
+    color: red;
+}
